# libprocessing

./: .gitignore  Cargo.toml  README.md  justfile  mkdocs.yml  rectangle.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/gltf/: Duck.glb
crates/generate_stubs/src/: main.rs
crates/processing_audio/: Cargo.toml
crates/processing_audio/src/: lib.rs
crates/processing_core/: Cargo.toml
crates/processing_core/src/: error.rs  lib.rs
crates/processing_cuda/: Cargo.toml
crates/processing_cuda/src/: lib.rs
crates/processing_ffi/: Cargo.toml  cbindgen.toml
crates/processing_ffi/src/: color.rs  error.rs  lib.rs
crates/processing_glfw/: Cargo.toml
crates/processing_glfw/src/: lib.rs
crates/processing_input/src/: lib.rs  state.rs
crates/processing_midi/: Cargo.toml
crates/processing_midi/src/: lib.rs
crates/processing_pyo3/: Cargo.toml  README.md  pyproject.toml
crates/processing_pyo3/examples/: animated_mesh.py  background_image.py  blend_modes.py  box.py  camera_controllers.py  compute.py  cuda.py  custom_material.py  field_animated.py  field_basic.py  field_emit.py  field_emit_gpu.py  field_from_mesh.py  field_lifecycle.py  field_noise.py  field_stress.py  flocking.py  flocking_duck.py  flocking_gpu.py  geometry_methods.py  gltf_load.py  lights.py  materials.py  midi.py  particles.py  particles_animated.py  particles_basic.py  particles_emit.py  particles_emit_gpu.py  particles_from_mesh.py  particles_lifecycle.py  particles_noise.py  particles_stress.py  rectangle.py  test.py  test_jupyter.ipynb  test_jupyter_3d.ipynb  window_controls.py
crates/processing_pyo3/examples/.ipynb_checkpoints/: test_jupyter-checkpoint.ipynb  test_jupyter_3d-checkpoint.ipynb
crates/processing_pyo3/mewnala/: __init__.py  math.py
crates/processing_pyo3/src/: color.rs  compute.rs  cuda.rs  field.rs  glfw.rs  gltf.rs  graphics.rs  input.rs  lib.rs  material.rs  math.rs  midi.rs  monitor.rs  particles.rs  shader.rs  surface.rs  time.rs  webcam.rs
crates/processing_pyo3/src/python/: detect_env.py  ipython_post_execute.py  jupyter_post_execute.py  register_inputhook.py
crates/processing_render/: Cargo.toml  build.rs
crates/processing_render/src/: camera.rs  color.rs  compute.rs  config.rs  error.rs  gltf.rs  graphics.rs  image.rs  lib.rs  light.rs  midi.rs  monitor.rs  shader_value.rs  sketch.rs  surface.rs  time.rs  transform.rs
crates/processing_render/src/field/: field_color.wgsl  field_pbr.wgsl  material.rs  mod.rs  pack.rs  pack.wgsl
crates/processing_render/src/field/kernels/: mod.rs  transform.wgsl
crates/processing_render/src/geometry/: attribute.rs  attributes.rs  layout.rs  mod.rs
crates/processing_render/src/material/: custom.rs  mod.rs  pbr.rs
crates/processing_render/src/particles/: material.rs  mod.rs  pack.rs  pack.wgsl  particles.wgsl
crates/processing_render/src/particles/kernels/: mod.rs  noise.wgsl  transform.wgsl
crates/processing_render/src/render/: command.rs  material.rs  mesh_builder.rs  mod.rs  transform.rs
crates/processing_render/src/render/primitive/: arc.rs  curves.rs  ellipse.rs  mod.rs  quad.rs  rect.rs  shape.rs  shape3d.rs  text.rs  triangle.rs
crates/processing_render/src/text/: font.rs
crates/processing_utils/: Cargo.toml
crates/processing_utils/src/: lib.rs
crates/processing_wasm/: Cargo.toml
crates/processing_wasm/examples/: index.html
crates/processing_wasm/src/: lib.rs
crates/processing_webcam/: Cargo.toml
crates/processing_webcam/src/: lib.rs
docs/: api.md  field.md  gen_ref_pages.py  particles.md  principles.md
examples/: animated_mesh.rs  background_image.rs  blend_modes.rs  box.rs  camera_controllers.rs  compute_readback.rs  custom_attribute.rs  custom_material.rs  custom_shader.rs  field_animated.rs  field_basic.rs  field_colored.rs  field_colored_pbr.rs  field_emit.rs  field_emit_gpu.rs  field_from_mesh.rs  field_lifecycle.rs  field_noise.rs  field_oriented.rs  field_stress.rs  glfw.rs  gltf_load.rs  input.rs  lights.rs  materials.rs  midi.rs  particles.rs  particles_animated.rs  particles_basic.rs  particles_colored.rs  particles_colored_pbr.rs  particles_emit.rs  particles_emit_gpu.rs  particles_from_mesh.rs  particles_lifecycle.rs  particles_noise.rs  particles_oriented.rs  particles_stress.rs  pbr.rs  primitives_3d.rs  (+8 more)
ffi/: Cargo.toml
processing-ffi/: Cargo.toml
pycessing/: Cargo.toml  pyproject.toml
pycessing/src/: glfw.rs  lib.rs
render/: Cargo.toml
render/src/: lib.rs
src/: lib.rs  prelude.rs
tools/generate_stubs/src/: main.rs
