[package]
name = "processing"
version = "0.1.0"
edition = "2024"
autoexamples = false

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", no-default-features = true, features = [
    "bevy_render",
    "bevy_color",
] }
processing = { path = "." }
processing_pyo3 = { path = "crates/processing_pyo3" }
processing_render = { path = "crates/processing_render" }

[dependencies]
bevy = { workspace = true }
processing_render = { workspace = true }

[dev-dependencies]
glfw = "0.60.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
glfw = { version = "0.60.0", features = ["wayland"] }

[[example]]
name = "rectangle"
path = "examples/rectangle.rs"
