[package]
name = "pycessing"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pycessing"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
processing = { git = "https://github.com/processing/libprocessing.git" }
glfw = "0.60.0"
