[package]
name = "processing_ffi"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "processing"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
wayland = ["processing/wayland"]
x11 = ["processing/x11"]

[dependencies]
processing = { workspace = true }
bevy = { workspace = true }

[build-dependencies]
cbindgen = "0.29"
