[package]
name = "processing_pyo3"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "processing"
crate-type = ["cdylib"]

[features]
default = ["wayland"]
wayland = ["processing/wayland", "glfw/wayland"]
x11 = ["processing/x11"]

[dependencies]
pyo3 = "0.27.0"
processing = { workspace = true, features = ["python"] }
bevy = { workspace = true }
glfw = { version = "0.60.0"}

[target.'cfg(target_os = "macos")'.dependencies]
glfw = { version = "0.60.0", features = ["static-link"] }
