[package]
name = "processing_wasm"
version = "0.0.5"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
processing = { path = "../..", default-features = false }
bevy = { workspace = true, features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_040 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
getrandom_030 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_020 = { package = "getrandom", version = "0.2", features = ["js"] }
